# immutable_db

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/immutable_db/: alembic.ini  alembic_test.ini  shell.py
src/immutable_db/alembic/: env.py
src/immutable_db/alembic/versions/: 158339fde10b_.py  2fdf7799e12d_.py  56d1ee61890a_.py  6dbfa7bbd7bf_.py  a3f6b21dc87f_.py  b5921c11347d_.py  b7ce348fba04_.py  c7d48e719d6d_.py  de55144a38a0_.py  e3a577eed6fc_.py
src/immutable_db/db/: models.py
tests/: test_immutable_db.py
