[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immutable_db"
version = "0.0.1"
authors = [
  { name="Ben Thomasson", email="ben.thomasson@gmail.com" },
]
description = "Immutable database"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/benthomasson/immutable_db"
"Bug Tracker" = "https://github.com/benthomasson/immutable_db/issues"

[project.scripts]
immutable-db-shell = "immutable_db.shell:main"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
